# LLM_RAG_QnA

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: qa_corpus.jsonl  qa_questions.jsonl  sum_articles.jsonl
notebooks/: llm_vs_rag_qa_summarization.ipynb
outputs/: ablation_qa.csv  ablation_sum.csv  error_analysis_qa.csv  manual_annotations_filled.csv  manual_annotations_template.csv  metrics_qa.csv  metrics_qa_flan_reranker.csv  metrics_qa_mistral.csv  metrics_sum.csv  metrics_sum_main_backup.csv  metrics_sum_mistral.csv  predictions_all_scored.csv  predictions_qa.csv  predictions_sum.csv  spearman_rho.txt
scripts/: __init__.py  build_paper_docx.py  download_data.py  prepare_colab_bundle.ps1  run_ablations.py  run_experiments.py  run_three_steps.py  run_tinyllama_gpu.ps1
src/llm_rag_qna/: __init__.py  chunking.py  evaluation.py  generator.py  pipeline.py  prompts.py  retrievers.py  utils.py  viz.py
